--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pyinstaller
           pyinstaller --onefile --windowed gui.spec gui.py
+          dir
 
       # save the built .exe file to repo
       - name: Commit files
