--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,12 +40,12 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "github-actions"
           git add --all
-          if [-z "$(git status --porcelain)"]; then
-             echo "::set-output name=push::false"
-          else
-             git commit -m "Add changes" -a
-             echo "::set-output name=push::true"
-          fi
+#          if [-z "$(git status --porcelain)"]; then
+#             echo "::set-output name=push::false"
+#          else
+#             git commit -m "Add changes" -a
+#             echo "::set-output name=push::true"
+#          fi
         shell: bash
       - name: Push changes
         if: steps.commit.outputs.push == 'true'
