--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,23 +32,10 @@ jobs:
           pip install pyinstaller
           pyinstaller --onefile --windowed gui.spec gui.py
           dir
-
-      # save the built .exe file to repo
-      - name: Commit files
-        id: commit
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "github-actions"
-          git add --all
-#          if [-z "$(git status --porcelain)"]; then
-#             echo "::set-output name=push::false"
-#          else
-#             git commit -m "Add changes" -a
-#             echo "::set-output name=push::true"
-#          fi
-        shell: bash
-      - name: Push changes
-        if: steps.commit.outputs.push == 'true'
-        uses: ad-m/github-push-action@master
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v2
         with:
-           github_token: ${{ secrets.GITHUB_TOKEN }}
+          name: dist-without-markdown
+          path: |
+            dist
+
