--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,16 +26,19 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: pyinstall .exe file
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
           pyinstaller --onefile --windowed gui.spec gui.py
           dir
-      - name: Archive production artifacts
+      - name: create .exe artifacts
         uses: actions/upload-artifact@v2
         with:
           name: dist
           path: |
-            **/*.exe
+            dist
+
+      - name: Fix file permissions
+          run: find . -type f -name '*.sh' -exec chmod +x {} \;
 
