--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: pyinstall .exe file
         run: |
-          cd src
           python -m pip install --upgrade pip
           pip install pyinstaller
-          pyinstaller --onefile --windowed gui.spec gui.py
+          pyinstaller --onefile --windowed src/gui.spec src/gui.py
           dir
 
       - name: create .exe artifacts
