--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
-          pyinstaller --onefile --windowed src/gui.spec src/gui.py
+          pyinstaller --onefile --windowed src\gui.spec src\gui.py
           dir
 
       - name: create .exe artifacts
