--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: pyinstall .exe file
         run: |
-          cd src/
+          dir
           python -m pip install --upgrade pip
           pip install pyinstaller
           pyinstaller --onefile --windowed gui.spec gui.py
